# GlobalProtect-openconnect

apps/gpgui/: Cargo.toml  index.html  package.json  tauri.conf.json
apps/gpgui/src/: App.tsx  auth_manager.rs  auto_connect.rs  config.rs  main.rs  portal_manager.rs  tray.rs  vpn_client.rs
simple-gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
simple-gui/src/: App.tsx  main.tsx
