[package]
name = "gpgui"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "system-tray",
  "window-hide",
  "window-show",
  "window-close",
  "window-start-hidden",
  "shell-open",
  "fs-read-file",
  "fs-write-file",
  "path-all",
  "process-exit",
  "updater",
] }
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
url = "2.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
gpapi = { path = "../../crates/gpapi" }
common = { path = "../../crates/common" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = []